--- a/www/index.html
+++ b/www/index.html
@@ -4,10 +4,10 @@
 		<meta charset="utf-8">
 		<meta name="format-detection" content="telephone=no" />
 		<meta name="msapplication-tap-highlight" content="no" />
-		<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+		<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
 		<title>Picture Tour</title>
 	</head>
-	<body ontouchstart="">
+  <body> 
 		<div id="app"></div>
 		<script type="text/javascript" src="./cordova.js"></script>
 		<script type="text/javascript" src="./bundle.js"></script>
